[gd_scene load_steps=14 format=3 uid="uid://c8ahqhmkuob6d"]

[ext_resource type="PackedScene" uid="uid://dg3skjko6rcqc" path="res://scenes/escritorio_sprite.tscn" id="1_5viur"]
[ext_resource type="Script" path="res://script/main.gd" id="1_o8kaa"]
[ext_resource type="PackedScene" uid="uid://bkskky10obye7" path="res://scenes/carta.tscn" id="2_krjd3"]
[ext_resource type="PackedScene" uid="uid://bq5m52kgqx1n7" path="res://scenes/texto.tscn" id="4_fgr2b"]
[ext_resource type="PackedScene" uid="uid://ceeivj7ajngfv" path="res://scenes/livroderegras.tscn" id="4_wcrty"]
[ext_resource type="FontFile" uid="uid://fenv4xgdmyyy" path="res://fonts/PixelOperator8.ttf" id="6_1xo03"]
[ext_resource type="FontFile" uid="uid://daxfdsjhbdu48" path="res://fonts/PixelOperator8-Bold.ttf" id="8_magwp"]
[ext_resource type="Texture2D" uid="uid://dehqaaft31st0" path="res://assets/abadireita.png" id="9_gg3lf"]
[ext_resource type="Texture2D" uid="uid://r6xfdmqadj28" path="res://assets/abaesquerda.png" id="10_7cux2"]

[sub_resource type="Animation" id="Animation_mekmd"]
resource_name = "Fadein"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vum8c"]
resource_name = "Fadeout"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_gebqc"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ya8fi"]
_data = {
"Fadein": SubResource("Animation_mekmd"),
"Fadeout": SubResource("Animation_vum8c"),
"RESET": SubResource("Animation_gebqc")
}

[node name="Jogo2" type="Node2D"]
script = ExtResource("1_o8kaa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ya8fi")
}
autoplay = "Fadein"

[node name="escritorio_sprite" parent="." instance=ExtResource("1_5viur")]
position = Vector2(0, -3)

[node name="Camera2D" type="Camera2D" parent="escritorio_sprite"]
position = Vector2(0, -1)
zoom = Vector2(4, 4.6)

[node name="botãocartachegando" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = -96.0
offset_top = -30.0
offset_right = -88.0
offset_bottom = -22.0
scale = Vector2(5.84096, 1.91982)
mouse_default_cursor_shape = 2
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)

[node name="Carta_chegando" parent="." instance=ExtResource("2_krjd3")]
position = Vector2(-73, -30)
animation = &"nada"

[node name="Carta_mesa" parent="." instance=ExtResource("2_krjd3")]
position = Vector2(-2.92063e-06, 49.75)
scale = Vector2(1.04167, 0.85)

[node name="Carta_saindo" parent="." instance=ExtResource("2_krjd3")]
position = Vector2(71, -27)

[node name="botãoaceitar" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = 106.0
offset_top = 24.0
offset_right = 114.0
offset_bottom = 46.0
scale = Vector2(3.13832, 1.74883)
mouse_default_cursor_shape = 2

[node name="botãonegar" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = 71.0
offset_top = 26.0
offset_right = 79.0
offset_bottom = 46.0
scale = Vector2(3.41058, 1.7643)
mouse_default_cursor_shape = 2

[node name="Livro" parent="." instance=ExtResource("4_wcrty")]
visible = false
z_index = 10

[node name="FecharLivro" type="Button" parent="Livro"]
modulate = Color(1, 1, 1, 0)
offset_left = -13.0
offset_top = -65.0
offset_right = 14.0
offset_bottom = -41.0
mouse_default_cursor_shape = 2

[node name="texto" parent="." instance=ExtResource("4_fgr2b")]
visible = false
z_index = 6
position = Vector2(0, -1)

[node name="Fechar" type="Button" parent="texto"]
modulate = Color(1, 1, 1, 0)
offset_left = 32.0
offset_top = -73.0
offset_right = 62.0
offset_bottom = -46.0
mouse_default_cursor_shape = 2

[node name="destinatario" type="Label" parent="texto"]
unique_name_in_owner = true
z_index = 7
offset_left = -54.0
offset_top = -38.0
offset_right = 100.0
offset_bottom = -30.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_magwp")
theme_override_font_sizes/font_size = 8
autowrap_mode = 2

[node name="textinho" type="Label" parent="texto"]
unique_name_in_owner = true
offset_left = -52.0
offset_top = -28.0
offset_right = 52.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1xo03")
theme_override_font_sizes/font_size = 8
autowrap_mode = 3

[node name="remetente" type="Label" parent="texto"]
unique_name_in_owner = true
z_index = 7
offset_left = -54.0
offset_top = -47.0
offset_right = 99.0
offset_bottom = -39.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_magwp")
theme_override_font_sizes/font_size = 8
autowrap_mode = 2

[node name="cartaReabrir" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = -22.0
offset_top = 38.0
offset_right = 23.0
offset_bottom = 61.0
mouse_default_cursor_shape = 2

[node name="Livrinho" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -30.0
offset_top = -22.0
offset_right = -5.0
offset_bottom = 3.0
mouse_default_cursor_shape = 2

[node name="Lixeira" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = -141.0
offset_top = -13.0
offset_right = -86.0
offset_bottom = 48.0
mouse_default_cursor_shape = 2

[node name="Dia" type="Label" parent="."]
z_index = 2
offset_left = -8.0
offset_top = -55.0
offset_right = 14.0
offset_bottom = -47.0
scale = Vector2(0.732006, 1.29638)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_magwp")
theme_override_font_sizes/font_size = 8
text = "Dia"
horizontal_alignment = 1

[node name="Pontos" type="Label" parent="."]
z_index = 2
offset_left = -5.0
offset_top = -43.0
offset_right = 2.0
offset_bottom = -35.0
scale = Vector2(1.45307, 1.81011)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1xo03")
theme_override_font_sizes/font_size = 8
text = "X"
horizontal_alignment = 1

[node name="Abadireita" type="Sprite2D" parent="."]
position = Vector2(72, -46)
scale = Vector2(1, 1.01891)
texture = ExtResource("9_gg3lf")

[node name="Abaesquerda" type="Sprite2D" parent="."]
position = Vector2(-72, -46)
texture = ExtResource("10_7cux2")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 50.0
one_shot = true
autostart = true

[connection signal="pressed" from="botãocartachegando" to="." method="_on_botãocartachegando_pressed"]
[connection signal="pressed" from="botãoaceitar" to="." method="_on_botãoaceitar_pressed"]
[connection signal="pressed" from="botãonegar" to="." method="_on_botãonegar_pressed"]
[connection signal="pressed" from="Livro/FecharLivro" to="." method="_on_fechar_livro_pressed"]
[connection signal="pressed" from="texto/Fechar" to="." method="_on_fechar_pressed"]
[connection signal="pressed" from="cartaReabrir" to="." method="_on_carta_reabrir_pressed"]
[connection signal="pressed" from="Livrinho" to="." method="_on_livrinho_pressed"]
[connection signal="pressed" from="Lixeira" to="." method="_on_lixeira_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
